# rust_middleware

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  run-migrations.sh
.github/: ISSUE_TEMPLATE.md
conf/: log4rs-example.yaml  log4rs.yaml
docker/: Dockerfile  Rocket.toml  aeternity.yaml  log4rs-minimal.yaml  schema.sql
docs/: middleware-guide.md
frontend/: Dockerfile  Makefile  README.md  nginx.Dockerfile  nuxt.config.js  package-lock.json  package.json
frontend/components/appTableAccordion/: index.vue
frontend/components/blockHeight/: index.vue
frontend/components/formatAddress/: index.vue
frontend/components/logo/: index.vue
frontend/components/searchBar/: index.vue
frontend/pages/: index.vue
frontend/pages/account/_transactions/: _id.vue
frontend/pages/auctions/: index.vue
frontend/pages/channels/: index.vue
frontend/pages/channels/_transactions/: _id.vue
frontend/pages/contracts/: index.vue
frontend/pages/contracts/_transactions/: _id.vue
frontend/pages/faucet/: index.vue
frontend/pages/generations/: index.vue
frontend/pages/generations/_generation/: index.vue
frontend/pages/names/: index.vue
frontend/pages/oracles/: index.vue
frontend/pages/oracles/_queries/: _id.vue
frontend/pages/transactions/: index.vue
frontend/pages/transactions/_transaction/: index.vue
frontend/partials/appHeader/: index.vue
frontend/partials/appMainNav/: index.vue
frontend/partials/channels/channel/: index.vue
frontend/partials/contract/: index.vue
frontend/partials/generation/: index.vue
frontend/partials/generationDetails/: index.vue
frontend/partials/names/name/: index.vue
frontend/partials/names/nameAuction/: index.vue
frontend/partials/names/nameAuctionList/: index.vue
frontend/partials/oracles/oracle/: index.vue
frontend/partials/oracles/oracleQuery/: index.vue
frontend/partials/transactionDetails/: index.vue
frontend/partials/transactions/txListItem/: index.vue
frontend/partials/transactions/txListType/: GAAttachTx.vue  channelCloseMutualTx.vue  channelCloseSoloTx.vue  channelCreateTx.vue  channelDepositTx.vue  channelForceProgressTx.vue  channelSettleTx.vue  channelSlashTx.vue  channelSnapshotSoloTx.vue  channelWithdrawTx.vue  contractCallTx.vue  contractCreateTx.vue  gaAttachTx.vue  gaMetaTx.vue  nameClaimTx.vue  namePreclaimTx.vue  nameRevokeTx.vue  nameTransferTx.vue  nameUpdateTx.vue  oracleExtendTx.vue  oracleQueryTx.vue  oracleRegisterTx.vue  oracleResponseTx.vue  spendTx.vue
frontend/plugins/directives/: vueSliderComponent.js
frontend/store/: account.js  channels.js  contracts.js  generations.js  index.js  names.js  oracles.js  transactions.js
migrations/2018-06-28-132749_create_blocks/: up.sql  up.sql~
migrations/2018-06-28-132749_create_key_blocks/: up.sql
migrations/2018-06-28-132752_create_transactions/: up.sql  up.sql~
migrations/2018-11-13-124222_create_micro_blocks/: up.sql
migrations/2018-11-13-132752_create_transactions/: up.sql
migrations/2019-02-19-141312_agg_generations/: down.sql  up.sql
migrations/2019-02-22-142023_create_oracle_queries/: up.sql
migrations/2019-02-25-134849_contract_identifiers/: up.sql
migrations/2019-02-26-113638_channel_identifiers/: up.sql
migrations/2019-04-09-072818_create_names/: up.sql
migrations/2019-05-03-135634_add_result_to_contract_call/: up.sql
migrations/2019-05-16-092931_add-function-return-value/: up.sql
migrations/2019-06-26-111126_update_names/: up.sql
migrations/2019-08-07-084524_add_base64_encoded_tx/: up.sql
migrations/2019-08-14-101340_more_transactions_tx_indices/: down.sql  up.sql
migrations/2019-08-26-121024_update_contract_calls/: down.sql  up.sql
migrations/2019-09-04-124457_better-index-transactions/: down.sql  up.sql
migrations/2019-09-06-040355_aens-indices/: down.sql  up.sql
migrations/2019-09-27-131002_add-aens-fields/: down.sql  up.sql
migrations/2019-10-15-105814_name_auction_views/: down.sql  up.sql
migrations/2019-10-18-115714_add-transactions-name-index/: down.sql  up.sql
migrations/2019-10-21-135143_update_name_auction_entries/: up.sql
migrations/2019-10-25-101053_add_spend_transactions/: down.sql  up.sql
migrations/2019-10-28-104756_fix-auction-length/: up.sql
migrations/2019-10-29-091440_add_auction_end_to_names/: down.sql  up.sql
migrations/2019-11-01-085410_fix-winning_binds-view/: up.sql
migrations/2019-11-02-100848_fix-auctions-views-again/: up.sql
migrations/2019-11-04-110845_names-case-insensitive-and-materialized-views/: up.sql
migrations/2019-11-26-143150_add-vm-and-abi-versions-to-contract-identifiers/: down.sql  up.sql
migrations/2019-11-27-152310_add_name_auction_update_check_function/: down.sql  up.sql
scripts/: aepp-middleware.startup  aeternal-http.service  aeternal-loader.service  db.sql  mdw-http.service  mdw-loader.service  monitor.py  prepare-db.sql  release.sh
src/: aens.rs  compiler.rs  epoch.rs  hashing.rs  lib.rs  loader.rs  main.rs  middleware_error.rs  middleware_result.rs  models.rs  node.rs  schema.rs  server.rs  server.rs~  transaction.rs  websocket.rs
swagger/: swagger.json
test/: tests.sh
test/keys/: new  new.pub
tests/: integration_tests.rs
