[package]
name = "aeternity_middleware"
version = "0.1.0"
authors = ["John Newby <john@newby.org>"]

[features]
client = [ ]

[dependencies]
rust-base58 = "*"
rust-crypto = "^0.2"
rand = "^0.5.1"
hex = "0.3.2"
blake2b = "0.7.0"
untrusted = "0.5"
futures = "0.1"
#hyper = "0.12.4"
curl = "0.4.19"
#http = "0.1.8"
hyper-tls = {version = "0.1.2", optional = true}
regex = "1.0"
lazy_static = "0.2"
log = "0.4.6"
env_logger = "0.6.0"
mime = "0.3.3"
# multipart = {version = "0.13.3", optional = true}
native-tls = {version = "0.2.2", optional = true}
openssl = {version = "0.10.15", optional = true}
percent-encoding = {version = "1.0.0", optional = true}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.0.4"}
serde_json = {version = "1.0.22", features=["arbitrary_precision"]}
#serde_macros = "0.8.9"
#serde_urlencoded = {version = "0.5.1"}
serde-xml-rs = {git = "git://github.com/Metaswitch/serde-xml-rs.git" , branch = "master", optional = true}
error-chain = "0.11"
diesel = { version = "1.3.3", features = ["postgres", "numeric", "serde_json", "r2d2", ] }
dotenv = "0.13.0"
bigdecimal = "0.0.11"
itertools = "0.7.8"
tokio-core = "0.1.17"
clap = "~2.32"
rocket = "0.3.6"
rocket_contrib = "0.3.6"
rocket_codegen = "0.3.6"
rocket_cors = "0.3.0"
r2d2 = "*"
r2d2-diesel = "*"
postgres = "0.15.2"
