[package]
name = "aepp-middleware"
version = "0.10.0"
authors = ["John Newby <@johnsnewby>", "Shubhendu Shekhar <@shekhar-shubhendu>", "Andrea Giacobino <@noandrea>" ]
description = "æternity node middleware: A caching and reporting layer for aeternity blockchain"

[lib]
name = "aepp_middleware"
path = "src/lib.rs"

[[bin]]
name = "aeternal"
path = "src/main.rs"

[features]
client = [ ]

[dependencies]
assert-json-diff = "1.0.0"
backtrace = "0.3.37"
base58 = "0.1.0"
base58check = "0.0.1"
base64 = "0.10.1"
bigdecimal = { version = "0.0.14", features = ["serde",] }
blake2 = "0.8.1"
blake2b = "0.7.0"
byteorder = "1.3.2"
chashmap = "2.2.2"
chrono = "0.4.9"
clap = "2.33.0"
curl = "0.4.24"
daemonize = "0.4.1"
diesel = { version = "1.4.2", features = ["postgres", "numeric", "serde_json", "r2d2",  ] }
diesel_migrations = "1.4.0"
dotenv = "0.14.1"
env_logger = "0.6.2"
error-chain = "0.12.1"
flexi_logger = "0.14.3"
futures = "0.1"
hex = "0.4.0"
hyper-tls = {version = "0.1.2", optional = true}
itertools = "0.7.8"
lazy_static = "1.4.0"
log = "0.4.6"
log4rs = "0.8.3"
log4rs-email = { git = "https://github.com/johnsnewby/log4rs-email" }
mime = "0.3.3"
native-tls = {version = "0.2.2", optional = true}
openssl = {version = "0.10.15", optional = true}
percent-encoding = {version = "1.0.0", optional = true}
postgres = {version = "0.15.2", features = ["with-chrono", "with-serde_json"] }
r2d2 = "*"
r2d2-diesel = "*"
r2d2_postgres = "0.14.0"
rand = "0.7.2"
regex = "1.3.1"
reqwest = "0.9.20"
rocket = "0.4.2"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", tag = "v0.5.0-beta-1" }
rust-base58 = "*"
rust-crypto = "^0.2"
rust_decimal = { version = "0.11.1", features = ["postgres", "serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = {version = "1.0.22", features=["arbitrary_precision"]}
serde-xml-rs = {git = "git://github.com/Metaswitch/serde-xml-rs.git" , branch = "master", optional = true}
sha2 = "*"
ws = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]
